--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +88,8 @@
     "    \n",
     "    plt.suptitle('Ecuación de Poisson')\n",
     "    \n",
-    "    tri1 = ax1.plot_trisurf(p[:,0], p[:,1], u_ap[:])\n",
-    "    tri2 = ax2.plot_trisurf(p[:,0], p[:,1], u_ex[:])\n",
+    "    tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:])\n",
+    "    tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:])\n",
     "    \n",
     "    ax1.set_zlim([min, max])\n",
     "    ax1.set_title('Solución Aproximada')\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +119,8 @@
     "    for k in range(0,t,step):\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
-    "        tri1 = ax1.plot_trisurf(p[:,0], p[:,1], u_ap[:,k])\n",
-    "        tri2 = ax2.plot_trisurf(p[:,0], p[:,1], u_ex[:,k])\n",
+    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:])\n",
+    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:])\n",
     "        ax1.set_zlim([min, max])\n",
     "        ax1.set_title('Solución Aproximada')\n",
     "        ax2.set_zlim([min, max])\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,8 @@
     "    for k in range(0,t,step):\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
-    "        tri1 = ax1.plot_trisurf(p[:,0], p[:,1], u_ap[:,k])\n",
-    "        tri2 = ax2.plot_trisurf(p[:,0], p[:,1], u_ex[:,k])\n",
+    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:])\n",
+    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:])\n",
     "        ax1.set_zlim([min, max])\n",
     "        ax1.set_title('Solución Aproximada')\n",
     "        ax2.set_zlim([min, max])\n",
