--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_cloud_transient(u_ap, u_ex):\n",
+    "def graph_cloud_transient(p, u_ap, u_ex):\n",
     "    t = len(u_ex[0,:])\n",
     "    step = math.ceil(t/1000)\n",
     "    min  = u_ex.min()\n",
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_cloud_transient_vid(u_ap, u_ex, nube):\n",
+    "def graph_cloud_transient_vid(p, u_ap, u_ex, nube):\n",
     "    t = len(u_ex[0,:])\n",
     "    step = math.ceil(t/1000)\n",
     "    min  = u_ex.min()\n",
@@ -175,6 +175,21 @@
     "            ax2.cla()\n",
     "    \n",
     "    out.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def graphEr(er):\n",
+    "  t = t = len(er)\n",
+    "  T = np.linspace(0,1,t);\n",
+    "  plt.plot(T,er)\n",
+    "  plt.ylabel('Error')\n",
+    "  plt.xlabel('Tiempo en segundos')\n",
+    "  plt.title('Error cometido en el método')"
    ]
   }
  ],
