--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -119,8 +119,8 @@
     "    for k in range(0,t,step):\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
-    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:])\n",
-    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:])\n",
+    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
+    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:, k])\n",
     "        ax1.set_zlim([min, max])\n",
     "        ax1.set_title('Solución Aproximada')\n",
     "        ax2.set_zlim([min, max])\n",
@@ -152,8 +152,8 @@
     "    for k in range(0,t,step):\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
-    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:])\n",
-    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:])\n",
+    "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
+    "        tri2 = ax2.scatter(p[:,0], p[:,1], u_ex[:, k])\n",
     "        ax1.set_zlim([min, max])\n",
     "        ax1.set_title('Solución Aproximada')\n",
     "        ax2.set_zlim([min, max])\n",
