Ident and comments

--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -52,9 +52,12 @@
     "    min  = u_ex.min()\n",
     "    max  = u_ex.max()\n",
     "    T    = np.linspace(0,1,t)\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw={\"projection\": \"3d\"})\n",
+    "    fig  = plt.figure(figsize =(15, 5))\n",
     "    \n",
-    "    for k in range(o,t,step):\n",
+    "    ax1  = fig.add_subplot(1,2,1, projection='3d')\n",
+    "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
+    "    \n",
+    "    for k in range(0,t,step):\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        \n",
@@ -184,12 +187,12 @@
    "outputs": [],
    "source": [
     "def graphEr(er):\n",
-    "  t = t = len(er)\n",
-    "  T = np.linspace(0,1,t);\n",
-    "  plt.plot(T,er)\n",
-    "  plt.ylabel('Error')\n",
-    "  plt.xlabel('Tiempo en segundos')\n",
-    "  plt.title('Error cometido en el método')"
+    "    t = t = len(er)\n",
+    "    T = np.linspace(0,1,t);\n",
+    "    plt.plot(T,er)\n",
+    "    plt.ylabel('Error')\n",
+    "    plt.xlabel('Tiempo en segundos')\n",
+    "    plt.title('Error cometido en el método')"
    ]
   }
  ],
