--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -58,6 +58,8 @@
     "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
     "    \n",
     "    for k in range(0,t,step):\n",
+    "        ax1.cla()\n",
+    "        ax2.cla()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        \n",
@@ -67,11 +69,7 @@
     "        ax2.set_title('Solución Exacta')\n",
     "        ax2.plot_surface(x, y, u_ex[:,:,k])\n",
     "    \n",
-    "        plt.show()\n",
-    "        \n",
-    "        if k < t-step:\n",
-    "            ax1.cla()\n",
-    "            ax2.cla()"
+    "        plt.pause(0.1)"
    ]
   },
   {
@@ -120,6 +118,8 @@
     "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
     "\n",
     "    for k in range(0,t,step):\n",
+    "        ax1.cla()\n",
+    "        ax2.cla()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
@@ -129,10 +129,7 @@
     "        ax2.set_zlim([min, max])\n",
     "        ax2.set_title('Solución Exacta')\n",
     "        fig.canvas.draw()\n",
-    "\n",
-    "        if k < t-step:\n",
-    "            ax1.cla()\n",
-    "            ax2.cla()"
+    "        plt.pause(0.1)\n"
    ]
   },
   {
@@ -153,6 +150,8 @@
     "    nom  = nube + '.avi'\n",
     "\n",
     "    for k in range(0,t,step):\n",
+    "        ax1.cla()\n",
+    "        ax2.cla()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
@@ -162,6 +161,7 @@
     "        ax2.set_zlim([min, max])\n",
     "        ax2.set_title('Solución Exacta')\n",
     "        fig.canvas.draw()\n",
+    "        plt.pause(0.1)\n",
     "  \n",
     "        data = np.frombuffer(fig.canvas.tostring_rgb(), dtype=np.uint8)\n",
     "        ima = data.reshape(fig.canvas.get_width_height()[::-1] + (3,))\n",
@@ -172,10 +172,6 @@
     "            out = cv2.VideoWriter(nom,cv2.VideoWriter_fourcc(*'DIVX'), 25, size)\n",
     "  \n",
     "        out.write(ima)\n",
-    "\n",
-    "        if k < t-step:\n",
-    "            ax1.cla()\n",
-    "            ax2.cla()\n",
     "    \n",
     "    out.release()"
    ]
