Diffusion_Mesh completo

--- a/Generales/Graficar.ipynb
+++ b/Generales/Graficar.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_mesh_static(x, y, u_ap, u_ex):\n",
+    "def Mesh_Static(x, y, u_ap, u_ex):\n",
     "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw={\"projection\": \"3d\"})\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10,5)\n",
     "    \n",
     "    ax1.set_title('Aproximación')\n",
     "    ax1.plot_surface(x, y, u_ap)\n",
@@ -42,24 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_mesh_transient(x, y, u_ap, u_ex):\n",
+    "def Mesh_Transient(x, y, u_ap, u_ex):\n",
     "    t = len(u_ex[0,0,:])\n",
-    "    step = math.ceil(t/1000)\n",
-    "    min  = u_ex.min()\n",
-    "    max  = u_ex.max()\n",
+    "    step = math.ceil(t/10)\n",
     "    T    = np.linspace(0,1,t)\n",
-    "    fig  = plt.figure(figsize =(15, 5))\n",
-    "    \n",
-    "    ax1  = fig.add_subplot(1,2,1, projection='3d')\n",
-    "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
+    "\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw = {\"projection\": \"3d\"})\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10,5)\n",
     "    \n",
     "    for k in range(0,t,step):\n",
-    "        ax1.cla()\n",
-    "        ax2.cla()\n",
+    "        ax1.clear()\n",
+    "        ax2.clear()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        \n",
@@ -67,9 +65,7 @@
     "        ax1.plot_surface(x, y, u_ap[:,:,k])\n",
     "    \n",
     "        ax2.set_title('Solución Exacta')\n",
-    "        ax2.plot_surface(x, y, u_ex[:,:,k])\n",
-    "    \n",
-    "        plt.pause(0.1)"
+    "        ax2.plot_surface(x, y, u_ex[:,:,k])"
    ]
   },
   {
@@ -78,14 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_cloud_static(p, u_ap, u_ex):\n",
+    "def Cloud_Static(p, u_ap, u_ex):\n",
     "    min  = u_ex.min()\n",
     "    max  = u_ex.max()\n",
     "\n",
-    "    fig  = plt.figure(figsize =(15, 5))\n",
-    "    \n",
-    "    ax1  = fig.add_subplot(1,2,1, projection='3d')\n",
-    "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw = {\"projection\": \"3d\"})\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10,5)\n",
     "    \n",
     "    plt.suptitle('Ecuación de Poisson')\n",
     "    \n",
@@ -107,19 +101,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_cloud_transient(p, u_ap, u_ex):\n",
+    "def Cloud_Transient(p, u_ap, u_ex):\n",
     "    t = len(u_ex[0,:])\n",
     "    step = math.ceil(t/1000)\n",
     "    min  = u_ex.min()\n",
     "    max  = u_ex.max()\n",
     "    T    = np.linspace(0,1,t)\n",
-    "    fig  = plt.figure(figsize =(15, 5))\n",
-    "    ax1  = fig.add_subplot(1,2,1, projection='3d')\n",
-    "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw = {\"projection\": \"3d\"})\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10,5)\n",
     "\n",
     "    for k in range(0,t,step):\n",
-    "        ax1.cla()\n",
-    "        ax2.cla()\n",
+    "        ax1.clear()\n",
+    "        ax2.clear()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
@@ -138,20 +131,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graph_cloud_transient_vid(p, u_ap, u_ex, nube):\n",
+    "def Cloud_Transient_Vid(p, u_ap, u_ex, nube):\n",
     "    t = len(u_ex[0,:])\n",
     "    step = math.ceil(t/1000)\n",
     "    min  = u_ex.min()\n",
     "    max  = u_ex.max()\n",
     "    T    = np.linspace(0,1,t)\n",
-    "    fig  = plt.figure(figsize =(15, 5))\n",
-    "    ax1  = fig.add_subplot(1,2,1, projection='3d')\n",
-    "    ax2  = fig.add_subplot(1,2,2, projection='3d')\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, subplot_kw = {\"projection\": \"3d\"})\n",
+    "    plt.rcParams[\"figure.figsize\"] = (10,5)\n",
     "    nom  = nube + '.avi'\n",
     "\n",
     "    for k in range(0,t,step):\n",
-    "        ax1.cla()\n",
-    "        ax2.cla()\n",
+    "        ax1.clear()\n",
+    "        ax2.clear()\n",
     "        tin = float(T[k])\n",
     "        plt.suptitle('Solución al tiempo t = %1.3f seg.' %tin)\n",
     "        tri1 = ax1.scatter(p[:,0], p[:,1], u_ap[:, k])\n",
@@ -182,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def graphEr(er):\n",
+    "def Error(er):\n",
     "    t = t = len(er)\n",
     "    T = np.linspace(0,1,t);\n",
     "    plt.plot(T,er)\n",
