--- a/Generales/Errores.ipynb
+++ b/Generales/Errores.ipynb
@@ -43,18 +43,10 @@
     "En esta sección se implementan los códigos para calcular el Error Cuadrático Medio (ECM) sobre mallas lógicamentes rectangulares y sobre nubes de puntos. Se implementan las siguientes funciones:\n",
     "\n",
     "    1.  PolyArea(x, y): Se calcula el área del polígono formado por el nodo central y sus vecinos.\n",
-    "    2.  Mesh_Transient(x, y, u_ap, u_ex): Se calcula el ECM en mallas lógicamente rectangulares para problemas que involucran el tiempo.\n",
-    "    3.  Mesh_Static(x, y, u_ap, u_ex): Se calcula el ECM en mallas lógicamente rectangulares para problemas que no involucran el tiempo.\n",
-    "    4.  Cloud_Transient(x, y, u_ap, u_ex): Se calcula el ECM en nubes de puntos para problemas que involucran el tiempo.\n",
-    "    5.  Cloud_Static(x, y, u_ap, u_ex): Se calcula el ECM en nubes de puntos para problemas que no involucran el tiempo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## PolyArea\n",
-    "Se define la función para calcular el área de un polígono definido por los vertices cuyas coordenadas se guardan en $x$ y $y$."
+    "    2.  ECM_mesh_transient(x, y, u_ap, u_ex): Se calcula el ECM en mallas lógicamente rectangulares para problemas que involucran el tiempo.\n",
+    "    3.  ECM_mesh_static(x, y, u_ap, u_ex): Se calcula el ECM en mallas lógicamente rectangulares para problemas que no involucran el tiempo.\n",
+    "    4.  ECM_cloud_transient(x, y, u_ap, u_ex): Se calcula el ECM en nubes de puntos para problemas que involucran el tiempo.\n",
+    "    5.  ECM_cloud_static(x, y, u_ap, u_ex): Se calcula el ECM en nubes de puntos para problemas que no involucran el tiempo."
    ]
   },
   {
@@ -64,15 +56,7 @@
    "outputs": [],
    "source": [
     "def PolyArea(x,y):\n",
-    "    return 0.5*np.abs(np.dot(x, np.roll(y, 1)) - np.dot(y, np.roll(x, 1)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mesh Transient\n",
-    "En este caso se utiliza una malla lógicamente rectangular para un problema transiente. El polígono que se utiliza para calcular el área es el definido por todos los vecinos inmediatos del nodo interior."
+    "    return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))"
    ]
   },
   {
@@ -81,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Mesh_Transient(x, y, u_ap, u_ex):\n",
+    "def ECM_mesh_transient(x, y, u_ap, u_ex):\n",
     "    me   = x.shape                                                                  # Se calcula el tamaño de la malla.\n",
     "    m    = me[0]                                                                    # Se calcula el número de nodos en x.\n",
     "    n    = me[1]                                                                    # Se calcula el número de nodos en y.\n",
@@ -109,20 +93,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mesh Static\n",
-    "En este caso se utiliza una malla lógicamente rectangular para un problema que no depende del tiempo. El polígono que se utiliza para calcular el área es el definido por todos los vecinos inmediatos del nodo interior."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Mesh_Static(x, y, u_ap, u_ex):\n",
+    "def ECM_mesh_static(x, y, u_ap, u_ex):\n",
     "    me   = x.shape                                                                  # Se calcula el tamaño de la malla.\n",
     "    m    = me[0]                                                                    # Se calcula el número de nodos en x.\n",
     "    n    = me[1]                                                                    # Se calcula el número de nodos en y.\n",
@@ -148,20 +124,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cloud Transient\n",
-    "En este caso se utiliza una nube de puntos o una triangulación para un problema transiente. El polígono que se utiliza para calcular el área es el definido por todos los vecinos seleccionados del nodo interior."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Cloud_Transient(p, vec, u_ap, u_ex):\n",
+    "def ECM_cloud_transient(p, vec, u_ap, u_ex):\n",
     "    m    = len(p[:,0])                                                              # Se encuentra el tamaño de la triangulación.\n",
     "    t    = len(u_ap[1,:])                                                           # Se encuentra la cantidad de pasos en el tiempo.\n",
     "    er   = np.zeros(t)                                                              # Se inicializa la variable para guardar el error.\n",
@@ -186,20 +154,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cloud Static\n",
-    "En este caso se utiliza una nube de puntos o una triangulación para un problema que no depende del tiempo. El polígono que se utiliza para calcular el área es el definido por todos los vecinos seleccionados del nodo interior."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Cloud_Static(p, vec, u_ap, u_ex):\n",
+    "def ECM_cloud_static(p, vec, u_ap, u_ex):\n",
     "    m    = len(p[:,0])                                                              # Se encuentra el tamaño de la triangulación.\n",
     "    er   = 0                                                                        # Se inicializa la variable para guardar el error.\n",
     "    area = np.zeros(m)                                                              # Se inicializa la variable para guardar el área.\n",
